// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): errors 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): warnings 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot without values: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot without values: errors 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot without values: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    123,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3477,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3477,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "deflateed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    381,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 381,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateed": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    122,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 122,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateed": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3962,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3962,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "deflateRawed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    375,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 375,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateRawed": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    116,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 116,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateRawed": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3956,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3956,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: warnings 1`] = `Array []`;
